--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -401,8 +401,13 @@
     }
   }
 
-  &__paywall-section {
+  &__paywalled-view {
     box-shadow: 5px 2px 17px 8px rgba(0, 0, 0, 0.1);
     background-color: $grey3;
+    padding: 50px 0;
+
+    .o-paywalled {
+
+    }
   }
 }
