--- a/partials/article/paywall_article_notice.twig
+++ b/partials/article/paywall_article_notice.twig
@@ -10,11 +10,11 @@
                 to view our subscription options.
             </div>
             <div class="o-paywalled__action">
-                <a href="{{networkData.defaultBlogUrl}}/subscriptions" class="c-button c-button--radius c-button--lightBlue c-article__subscribe-button">SUBSCRIBE NOW</a>
+                <a href="{{networkData.defaultBlogUrl}}/subscriptions" class="c-button c-button--radius c-button--lightBlue c-article__subscribe-button">Subscribe</a>
                 {% if trialToggle %}
                     <a href="{{networkData.defaultBlogUrl}}/subscriptions" class="c-button c-button--radius c-button--lightBlue-bordered">Start Free Trial</a>
                 {% endif %}
-                <a id="articleSigninBtn" href="javascript:;" class="c-button c-button--radius c-button--lightBlue-bordered">SIGN IN</a>
+                <a id="articleSigninBtn" href="javascript:;" class="c-button c-button--radius c-button--lightBlue-bordered">Log in</a>
             </div>
         </div>
     </div>
