--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -130,8 +130,23 @@
     }
   }
 
-  &__main-container {
-    margin-top: 35px !important;
+  &__main {
+    &__paywall-container {
+      position: relative;
+      &:before {
+        content: '';
+        background-image: linear-gradient(to top, #ffffff 19%, rgba(255, 255, 255, 0.8) 45%);
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+    }
+
+    &-container {
+      margin-top: 35px !important;
+    }
   }
 
   &__excerpt {
@@ -407,7 +422,13 @@
     padding: 50px 0;
 
     .o-paywalled {
-
+      &__head {
+        @include font-size(32);
+        line-height: 1.25;
+        font-family: $secondaryFont;
+        font-weight: $weightBold;
+        color: $black;
+      }
     }
   }
 }
