--- a/section.twig
+++ b/section.twig
@@ -122,9 +122,9 @@
         </div>
         <div class="row">
             <div class="col-12">
-                {% if config['inventory']['adSpace']['mrec'][0] is defined %}
+                {% if config['inventory']['adSpace']['banner'][1] is defined %}
                     <div class="my-5 overflow-hidden">
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
+                        <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][1]}}" data-adshape="banner"></div>
                     </div>
                 {% endif %}
 
@@ -159,9 +159,9 @@
                     </div>
                 </div>
                 
-                {% if config['inventory']['adSpace']['mrec'][0] is defined %}
+                {% if config['inventory']['adSpace']['banner'][2] is defined %}
                     <div class="my-5 overflow-hidden">
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec" data-responsive="1"></div>
+                        <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][2]}}" data-adshape="banner"></div>
                     </div>
                 {% endif %}
             </div>
