--- a/section-video.twig
+++ b/section-video.twig
@@ -67,9 +67,9 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            {% if config['inventory']['adSpace']['mrec'][0] is defined %}
-                <div class="my-5">
-                    <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
+            {% if config['inventory']['adSpace']['banner'][1] is defined %}
+                <div class="my-5 overflow-hidden">
+                    <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][1]}}" data-adshape="banner"></div>
                 </div>
             {% endif %}
         </div>
@@ -123,9 +123,9 @@
         </div>
 
         <div class="col-12">
-            {% if config['inventory']['adSpace']['mrec'][0] is defined %}
-                <div class="my-5">
-                    <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
+            {% if config['inventory']['adSpace']['banner'][2] is defined %}
+                <div class="my-5 overflow-hidden">
+                    <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][2]}}" data-adshape="banner"></div>
                 </div>
             {% endif %}
         </div>
