--- a/search.twig
+++ b/search.twig
@@ -55,8 +55,10 @@
                         </section>
                         {% endif %}
                     </div>
-                    <div class="col-12 col-lg-4">
-                    
+                    <div class="col-12 col-lg-4 d-none d-lg-block">
+                        {% if config['inventory']['adSpace']['side-fix'][0] is defined %}
+                            <div class="j-adslot" id="{{config['inventory']['adSpace']['side-fix'][0]}}" data-adshape="side-fix"></div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
