--- a/section-digital.twig
+++ b/section-digital.twig
@@ -59,11 +59,12 @@
                 </div>
             {% endfor %}
         </div>
+
         <div class="row">
             <div class="col-12">
-                {% if config['inventory']['adSpace']['mrec'][0] is defined %}
-                    <div class="my-5">
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
+                {% if config['inventory']['adSpace']['banner'][1] is defined %}
+                    <div class="my-5 overflow-hidden">
+                        <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][1]}}" data-adshape="banner"></div>
                     </div>
                 {% endif %}
                 <div class="row">
@@ -80,9 +81,9 @@
                     {% endfor %}
                 </div>
                 
-                {% if config['inventory']['adSpace']['mrec'][0] is defined %}
-                    <div class="my-5">
-                        <div class="j-adslot" id="{{config['inventory']['adSpace']['mrec'][0]}}" data-adshape="mrec"></div>
+                {% if config['inventory']['adSpace']['banner'][2] is defined %}
+                    <div class="my-5 overflow-hidden">
+                        <div class="j-adslot" id="{{config['inventory']['adSpace']['banner'][2]}}" data-adshape="banner"></div>
                     </div>
                 {% endif %}
             </div>
