height changes in description

--- a/static/sass/cards/_card-9.scss
+++ b/static/sass/cards/_card-9.scss
@@ -25,6 +25,7 @@
             color: $grey5;
             @include font-size(13);
             line-height: 1.38;
+            margin: 8px 0 10px;
         }
 
         &__author {
