--- a/static/sass/cards/_card-1.scss
+++ b/static/sass/cards/_card-1.scss
@@ -136,3 +136,13 @@
         }
     }
 }
+
+.card-borderBottom__deskVersion {
+    .card-1-desktop {
+        @media #{$desktop-up} {
+            border-bottom: 1px solid $grey4;
+            padding-bottom: 15px;
+            margin-bottom: 15px;
+        }
+    }
+}
