--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -95,6 +95,7 @@
 @import "card-11";
 @import "event-card";
 @import "event-card-2";
+@import "event-card-3";
 
 //trumps
 @import "trumps.utilities";
