--- a/partials/panels/section-07.twig
+++ b/partials/panels/section-07.twig
@@ -45,7 +45,7 @@
                         {% endfor %}
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 left-border">
+                <div class="col-12 col-lg-3 card-borderBottom__deskVersion left-border">
                     {% for i in 4..6 if articles[articleCount] %}
                         {{this.render('../_single-article.twig', {
                         article: articles[articleCount],
