--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -71,7 +71,8 @@
 @import "component.form-pulldown";
 
 //my account page
-
+@import "cus_acnt_grid";
+@import "cus_acnt_page";
 // old
 @import "component.modal-login-form";
 @import "component.modal-password-reset-form";
