--- a/section.twig
+++ b/section.twig
@@ -159,7 +159,7 @@
                     </div>
                 </div>
 
-                <section class="loadmore__section text-center {{site}}">
+                <section class="loadmore__section mx-5 text-center {{site}}">
                     {% if articles|length >= limit %}
                         {{ this.render('/partials/load_more.twig', {
                             name            : "section-load",
