--- a/section.twig
+++ b/section.twig
@@ -157,6 +157,7 @@
                             </div>
                         {% endfor %}
                     </div>
+                    <section class="row" id="loadmore_section" class="loadmore__section {{site}}"></section>
                 </div>
 
                 <section class="loadmore__section my-5 text-center {{site}}">
@@ -198,7 +199,7 @@
             label           : "Load more",
             name            : 'section-load',
             blogid          : "{{ blogData['guid'] }}",
-            card_class      : 'col-md-4 card-sm card-sm-tablet card-sm-mobile',
+            card_class      : 'col-12 col-md-6 col-lg-3 left-border',
             non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
         });
     });
