--- a/section.twig
+++ b/section.twig
@@ -199,7 +199,7 @@
             label           : "Load more",
             name            : 'section-load',
             blogid          : "{{ blogData['guid'] }}",
-            card_class      : 'col-12 col-md-6 col-lg-3 left-border',
+            card_class      : 'col-12 col-md-6 col-lg-3 left-border card-2-mobile card-2-tablet card-2-desktop card-2--noDescription',
             non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
         });
     });
