--- a/section.twig
+++ b/section.twig
@@ -157,7 +157,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <section class="row" id="loadmore_section" class="loadmore__section {{site}}"></section>
+                    <section class="row mt-4" id="loadmore_section" class="loadmore__section {{site}}"></section>
                 </div>
 
                 <section class="loadmore__section my-5 text-center {{site}}">
@@ -199,7 +199,7 @@
             label           : "Load more",
             name            : 'section-load',
             blogid          : "{{ blogData['guid'] }}",
-            card_class      : 'col-12 col-md-6 col-lg-3 left-border card-2-mobile card-2-tablet card-2-desktop card-2--noDescription',
+            card_class      : 'col-12 col-md-6 col-lg-3 left-border mb-4 card-2-mobile card-2-tablet card-2-desktop card-2--noDescription',
             non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
         });
     });
