--- a/static/sass/components/_component.section.scss
+++ b/static/sass/components/_component.section.scss
@@ -67,6 +67,9 @@
                             height: 100%;
                         }
                     }
+                    .card-4-desktop {
+                        height: inherit;
+                    }
                 }
 
                 @media #{$tablet} {
