--- a/section-realestate.twig
+++ b/section-realestate.twig
@@ -126,8 +126,28 @@
                             </div>
                         {% endfor %}
                     </div>
+                    <section class="row mt-4" id="loadmore_section" class="loadmore__section {{site}}"></section>
                 </div>
             </div>
         </div>
     </div>
 </main>
+
+
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        const events = new Acme.Card();
+
+        Acme.loadMore = new Acme.ArticleFeed({
+            model           : Acme.Card,
+            container       : 'loadmore_section',
+            offset          : {{limit}},
+            limit           : 12,
+            label           : "Load more",
+            name            : 'section-load',
+            blogid          : "{{ blogData['guid'] }}",
+            card_class      : 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription col-12 col-md-6 col-lg-3 left-border mb-4',
+            non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
+        });
+    });
+</script>
