--- a/section-video.twig
+++ b/section-video.twig
@@ -120,7 +120,18 @@
                     </div>
                 {% endfor %}
             </div>
+            <section class="row mt-4" id="loadmore_section" class="loadmore__section {{site}}"></section>
         </div>
+
+        <section class="loadmore__section my-5 text-center {{site}}">
+            {% if articles|length >= limit %}
+                {{ this.render('/partials/load_more.twig', {
+                    name            : "section-load",
+                    label           : "Load more",
+                    buttonClass     : "u-loadmore-button",
+                }) | raw }}
+            {% endif %}
+        </section>
 
         <div class="col-12">
             {% if config['inventory']['adSpace']['banner'][2] is defined %}
@@ -133,3 +144,21 @@
 </div>
 
 </main>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function(event) {
+        const events = new Acme.Card();
+
+        Acme.loadMore = new Acme.ArticleFeed({
+            model           : Acme.Card,
+            container       : 'loadmore_section',
+            offset          : {{limit}},
+            limit           : 12,
+            label           : "Load more",
+            name            : 'section-load',
+            blogid          : "{{ blogData['guid'] }}",
+            card_class      : 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription col-12 col-md-6 col-lg-3 left-border mb-4',
+            non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
+        });
+    });
+</script>
