--- a/user-posts.twig
+++ b/user-posts.twig
@@ -82,7 +82,7 @@
                             </div>
                         </div>
                         <div class="c-cards-container c-cards-container-xs">
-                            <div class="row" id="loadmore_section">
+                            <div class="row">
                                 {% for i in 10..12 if userArticles[i] %}
                                     <div class="col-12 col-lg-4 left-border">
                                         {{this.render('partials/_single-article.twig', {
@@ -134,7 +134,7 @@
             label           : "Load more",
             name            : 'section-load',
             blogid          : "{{ blogData['guid'] }}",
-            card_class      : 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription col-12 col-md-6 col-lg-3 left-border mb-4',
+            card_class      : 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription col-12 col-md-6 col-lg-4 left-border mb-4',
             non_pinned      : "{{ articlesArr.existingNonPinnedCount }}"
         });
     });
